--- a/HTML/thankyou.html
+++ b/HTML/thankyou.html
@@ -10,7 +10,7 @@
    
 	<body id="moh">
 			<header>
-					<img id="banner"src="../IMG/a.pdf" alt="image of banner">
+					<img id="banner"src="../IMG/welcome.jpg" alt="image of banner">
 					
 					<nav>
 						<ul>
