--- a/HTML/e-services.html
+++ b/HTML/e-services.html
@@ -54,8 +54,8 @@ Easily book appointments for medical check-ups, vaccinations, and specialist con
 					</div>
 					<div id="links">
 					<span><a href="https://www.who.int/health-topics/vaccines-and-immunization">Vaccination Info</a></span>&nbsp;&nbsp;&nbsp;&nbsp;
-					<span><a href="https://www.who.int/health-topics/vaccines-and-immunization">Emergency Contacts</a></span>&nbsp;&nbsp;&nbsp;&nbsp;
-					<span><a href="https://www.who.int/health-topics/vaccines-and-immunization">Guidlines</a></span><br><br>
+					<span><a href="https://health.gov.tt/contact-us">Emergency Contacts</a></span>&nbsp;&nbsp;&nbsp;&nbsp;
+					<span><a href="https://health.gov.tt/news-and-updates">Latest Updates</a></span><br><br>
 					</div>
 			
 					</div>
