--- a/HTML/registration.html
+++ b/HTML/registration.html
@@ -123,8 +123,8 @@
    					</form><br><br>
 					<div id="links">
 					<span><a href="https://www.who.int/health-topics/vaccines-and-immunization">Vaccination Info</a></span>&nbsp;&nbsp;&nbsp;&nbsp;
-					<span><a href="https://www.who.int/health-topics/vaccines-and-immunization">Emergency Contacts</a></span>&nbsp;&nbsp;&nbsp;&nbsp;
-					<span><a href="https://www.who.int/health-topics/vaccines-and-immunization">Guidlines</a></span><br><br>
+					<span><a href="https://health.gov.tt/contact-us">Emergency Contacts</a></span>&nbsp;&nbsp;&nbsp;&nbsp;
+					<span><a href="https://health.gov.tt/news-and-updates">Latest Updates</a></span><br><br>
 					</div>
 			
 				</div>
