--- a/HTML/about.html
+++ b/HTML/about.html
@@ -44,6 +44,7 @@
 				<p>The Ministry of Health of Trinidad and Tobago serves as the nation's primary authority overseeing the health system, ensuring that all health-related organizations and institutions adhere to safety standards. Its mission is to provide effective leadership in the health sector through evidence-based policymaking, planning, monitoring, evaluation, collaboration, and regulation. At the helm is the Honourable Terrence Deyalsingh, who has been serving as Minister of Health since September 11, 2015. As the Member of Parliament for St. Joseph, Mr. Deyalsingh has been instrumental in steering the country's health policies, particularly during critical periods such as the COVID-19 pandemic.</p><br><br>
 				
 				<h2> You can visit us here</h2><br>
+				<!--the code below came for www.google.com and was copied and use to illustrate the Google map feature-->
 				<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d62722.946399291606!2d-61.5755353504616!3d10.720275536232233!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8c3607e2b831f521%3A0x50956f17d41794c3!2sMinistry%20Of%20Health!5e0!3m2!1sen!2stt!4v1747393000245!5m2!1sen!2stt" width="800" height="450" style="border-radius: 5px; margin: 10px auto; " allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
 				
 					<div id="links">
